<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/action_search_text"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always"/>

    <item
        android:id="@+id/favorite"
        android:title="@string/action_favorite_text"
        android:icon="@drawable/ic_favorite__24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/settings"
        android:title="@string/action_setting_text"
        android:icon="@drawable/ic_settings_24"
        app:showAsAction="ifRoom"
        tools:ignore="AlwaysShowAction"/>

</menu>