<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/v_shape_line"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/black_95"
                app:layout_constraintBottom_toBottomOf="@id/civ_item_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/civ_item_avatar"
                app:layout_constraintTop_toTopOf="@+id/civ_item_avatar" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_item_avatar"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                app:civ_border_color="@color/black_95"
                app:civ_border_width="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/tv_title_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_name"
                android:textSize="11sp"
                android:textColor="@color/black_85"
                app:layout_constraintTop_toBottomOf="@+id/civ_item_avatar"
                app:layout_constraintStart_toStartOf="@+id/civ_item_avatar"
                app:layout_constraintEnd_toStartOf="@+id/imb_favorite"
                app:layout_constraintBottom_toBottomOf="@+id/tv_item_name"/>

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy_item_name"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black_85"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_name"
                app:layout_constraintStart_toStartOf="@+id/tv_title_name"
                app:layout_constraintEnd_toStartOf="@+id/imb_favorite"
                app:layout_constraintBottom_toTopOf="@+id/tv_title_username"/>

            <TextView
                android:id="@+id/tv_title_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_username"
                android:textSize="11sp"
                android:textColor="@color/black_85"
                android:layout_marginTop="3dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
                app:layout_constraintStart_toStartOf="@+id/tv_title_name"
                app:layout_constraintEnd_toStartOf="@+id/imb_favorite"
                app:layout_constraintBottom_toBottomOf="@+id/tv_item_username"/>

            <TextView
                android:id="@+id/tv_item_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy_item_username"
                android:textSize="12sp"
                android:textStyle="bold|italic"
                android:textColor="@color/black_85"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_username"
                app:layout_constraintStart_toStartOf="@+id/tv_title_name"
                app:layout_constraintEnd_toStartOf="@+id/imb_favorite"
                app:layout_constraintBottom_toTopOf="@+id/tabs_follows"/>

            <TextView
                android:id="@+id/tv_title_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_location"
                android:textSize="12sp"
                android:textColor="@color/black_85"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintStart_toEndOf="@+id/civ_item_avatar"
                app:layout_constraintEnd_toStartOf="@+id/tv_title_company"
                app:layout_constraintTop_toTopOf="@+id/civ_item_avatar"
                app:layout_constraintBottom_toTopOf="@+id/tv_item_location"/>

            <TextView
                android:id="@+id/tv_item_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy_item_location"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black_85"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_location"
                app:layout_constraintBottom_toTopOf="@+id/v_shape_line"
                app:layout_constraintStart_toEndOf="@+id/civ_item_avatar"
                app:layout_constraintEnd_toStartOf="@+id/tv_item_company"/>

            <TextView
                android:id="@+id/tv_title_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_company"
                android:textSize="12sp"
                android:textColor="@color/black_85"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="@+id/tv_title_location"
                app:layout_constraintStart_toEndOf="@+id/tv_title_location"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_item_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy_item_company"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black_85"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_company"
                app:layout_constraintStart_toStartOf="@id/tv_title_company"
                app:layout_constraintEnd_toEndOf="@id/tv_title_company"/>

            <TextView
                android:id="@+id/tv_title_following"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_following"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/black_85"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toBottomOf="@+id/v_shape_line"
                app:layout_constraintBottom_toTopOf="@+id/tv_item_following"
                app:layout_constraintStart_toEndOf="@+id/civ_item_avatar"
                app:layout_constraintEnd_toStartOf="@+id/tv_title_followers"/>

            <TextView
                android:id="@+id/tv_item_following"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy_item_following"
                android:textSize="14sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black_85"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintStart_toEndOf="@+id/civ_item_avatar"
                app:layout_constraintEnd_toStartOf="@+id/tv_item_followers"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_following"
                app:layout_constraintBottom_toBottomOf="@+id/civ_item_avatar"/>

            <TextView
                android:id="@+id/tv_title_followers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_followers"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/black_85"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintStart_toEndOf="@+id/tv_title_following"
                app:layout_constraintEnd_toStartOf="@+id/tv_title_repository"
                app:layout_constraintTop_toTopOf="@+id/tv_title_following"/>

            <TextView
                android:id="@+id/tv_item_followers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy_item_followers"
                android:textSize="14sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black_85"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="@+id/tv_item_following"
                app:layout_constraintStart_toEndOf="@+id/tv_item_following"
                app:layout_constraintEnd_toStartOf="@+id/tv_item_repository"/>

            <TextView
                android:id="@+id/tv_title_repository"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_repository"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/black_85"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="@+id/tv_title_following"
                app:layout_constraintStart_toEndOf="@+id/tv_title_followers"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_item_repository"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy_item_repository"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black_85"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="@+id/tv_item_following"
                app:layout_constraintStart_toEndOf="@+id/tv_item_followers"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs_follows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/black_85"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_username"
                app:tabSelectedTextColor="@color/white_90"
                android:contentDescription="@string/talkback_tabs_follows"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_tabs_follows"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/tabs_follows"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:id="@+id/imb_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="25dp"
                android:background="#00000000"
                android:contentDescription="@string/talkback_tap_to_set_be_a_favorite_user"
                android:src="@drawable/ic_favorite"
                app:layout_constraintBottom_toBottomOf="@+id/tv_item_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_title_name"
                app:layout_constraintTop_toTopOf="@+id/tv_title_name"
                tools:ignore="TouchTargetSizeCheck" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="?android:attr/progressBarStyle"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>