<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/black_85">

        <ImageView
            android:id="@+id/iv_img_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner"
            android:clipToOutline="true"
            android:contentDescription="@string/talkback_photo_profile"
            android:outlineProvider="background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_title_text_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:text="@string/title_username"
            android:textSize="12sp"
            android:textColor="@color/white_90"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-5dp"
            app:layout_constraintStart_toEndOf="@+id/iv_img_avatar"
            app:layout_constraintTop_toTopOf="@+id/iv_img_avatar"
            app:layout_constraintBottom_toTopOf="@+id/tv_text_username"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_text_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/dummy_item_username"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="-5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white_90"
            app:layout_constraintStart_toEndOf="@+id/iv_img_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_text_username"
            app:layout_constraintBottom_toBottomOf="@+id/iv_img_avatar"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/baseline_delete_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_title_text_username"
            app:layout_constraintTop_toTopOf="@id/iv_img_avatar"
            android:contentDescription="@string/talkback_tap_to_delete_favorite_user"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>